<resources>
    <string name="app_name">SafeShift</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="click_to_login">Click to login</string>
    <string name="registerNow">Click to register</string>
    <string name="sign_out">Sign out</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="forgotButton">Send mail</string>
    <string name="forgot_password_string">Forgot password?</string>
    <string name="confirm">Confirm</string>

    <!-- Define the status array -->
    <string-array name="status_array">
        <item>Pending</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>

    <!-- Define the status prompt -->
    <string name="status_prompt">Select Order Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>